<resources>
    <string name="app_name">week1</string>
    <string name="back_button">뒤로가기버튼</string>
    <string name="greeting_question">오늘 하루는 어땠나요?</string>
    <string name="quest_sentence">감정 우표를 선택해주세요</string>
    <string name="description_text">선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다</string>

    <string name="emotion_text1">더없이 행복한 하루였어요</string>
    <string name="emotion_text2">들뜨고 흥분돼요</string>
    <string name="emotion_text3">평범한 하루였어요</string>
    <string name="emotion_text4">생각이 많아지고 불안해요</string>
    <string name="emotion_text5">부글부글 화가 나요</string>
    <string name="next_button">다음페이지버튼</string>

    <string name="next_page_text">다음 페이지</string>

</resources>