<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/back_button"
        android:contentDescription="@string/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitCenter"
        android:paddingTop="22dp"
        android:paddingStart="8dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/greeting_question"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@font/font_main"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quest_sentence"
        android:fontFamily="@font/font_main"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description_text"
        android:fontFamily="@font/font_sub"
        android:textColor="@color/black"
        android:textSize="11sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/next_button"
            android:src="@drawable/icon1"
            android:background="@drawable/next_page_button" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emotion_text1"
            android:fontFamily="@font/font_main"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:layout_marginBottom="13dp" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/next_button"
            android:src="@drawable/icon2"
            android:background="@drawable/next_page_button" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emotion_text2"
            android:fontFamily="@font/font_main"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:layout_marginBottom="13dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/next_button"
            android:src="@drawable/icon3"
            android:background="@drawable/next_page_button" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emotion_text3"
            android:fontFamily="@font/font_main"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:layout_marginBottom="13dp" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/next_button"
            android:src="@drawable/icon4"
            android:background="@drawable/next_page_button" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emotion_text4"
            android:fontFamily="@font/font_main"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_gravity="center"
            android:layout_marginBottom="13dp" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/next_button"
            android:src="@drawable/icon5"
            android:background="@drawable/next_page_button" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/font_main"
            android:text="@string/emotion_text5"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>